--- a/css/styles.css
+++ b/css/styles.css
@@ -11,15 +11,30 @@ header, footer {
 main {
     margin: 0 auto 0 60px;
 }
+.text {
+	width: 70%;
+}
 body {
     margin: 0;
     font-family: sans-serif;
+    font-size: 16px;
+}
+#menu select {
+	display: inline;
+	
+	}
+#menu select:nth-child(2) {
+	margin-left: 1em;
+	}
+#menu {
+	margin-top: 5px;
+	height: 25em;
 }
 footer p {
     padding-top: 1em;
     padding-bottom: 1em;
     padding-left: 60px;
-
+	font-size: .8em;
     color: white;
     margin: 0 auto;
 }
@@ -27,12 +42,21 @@ footer a {
     color: white;
     margin: 0 auto;
 }
-table, table caption {
-	width: 40%;
+table {
+	min-width: 600px;
+	max-width: 800px;
+	margin-top: 1em;
 	text-align: left;
+	border: 1px solid black;
 	border-collapse: collapse;
 	margin-bottom: 1em;
+	font-size: .8em;
+}
+
+thead {
+	font-weight: bold;
 }
 table td {
-    padding: 5px;
-    }
+	border: 1px solid black;
+	padding: 5px;
+}
