--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,16 @@
 main h1 {
     margin-bottom: 5px;
 }
-#caption {
+#caption p {
     margin: 0 auto;
     padding: 0;
+}
+#caption sup {
+	font-size: 12px;
+	margin-left: 1em;
+	padding: 3px;
+	background-color: #2A2F4E;
+	color: white;
 }
 header, footer {
     background-color: #2a2f4e;
