--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,44 @@ header, footer {
 main {
     margin: 0 auto 0 60px;
 }
+aside {
+	background-color: teal;
+	color: white;
+	padding: 5px;
+	float: right;
+}
+.axis path, .axis line {
+	fill: none;
+	stroke: black;
+	stroke-width: 1px;
+	shape-rendering: crispEdges;
+
+}
+.axis text {
+	font-size: 10px;
+	}
+.plan {
+	fill: none;
+	stroke: #EB6A65;
+	stroke-width: 2px;
+}
+.fact {
+	fill: none;
+	stroke: #2A2F4E;
+	stroke-width: 2px;
+}
 .text {
 	width: 70%;
+}
+
+.poplanu, .ispolneno {
+	opacity: 0.2;
+}
+.poplanu {
+	fill: #EB6A65;
+}
+.ispolneno {
+	fill: #2A2F4E;
 }
 body {
     margin: 0;
@@ -48,6 +84,15 @@ footer p {
 footer a {
     color: white;
     margin: 0 auto;
+}
+footer #cc {
+	padding-top: .5em;
+    padding-bottom: .5em;
+    padding-left: 60px;
+}
+#cc p {
+	display: inline;
+	padding-left: 1em;
 }
 table {
 	min-width: 600px;
